@@ -27,6 +27,36 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <version>2.7</version>
+    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.apache.geronimo.specs</groupId>-->
+<!--      <artifactId>geronimo-jms_1.1_spec</artifactId>-->
+<!--      <version>1.1</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.apache.qpid</groupId>-->
+<!--      <artifactId>qpid-jms-client</artifactId>-->
+<!--      <version>0.40.0</version>-->
+<!--    </dependency>-->
+    <dependency>
+      <groupId>org.apache.activemq</groupId>
+      <artifactId>activemq-all</artifactId>
+      <version>5.10.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.avro</groupId>
       <artifactId>avro</artifactId>
       <version>${avro.version}</version>
@@ -37,6 +67,7 @@
       <version>${spark1.version}</version>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming_2.10</artifactId>
@@ -167,15 +198,117 @@
     </dependency>
   </dependencies>
 
+  <!--  <build>-->
+  <!--    <plugins>-->
+  <!--      <plugin>-->
+  <!--        <groupId>org.apache.felix</groupId>-->
+  <!--        <artifactId>maven-bundle-plugin</artifactId>-->
+  <!--        <version>3.3.0</version>-->
+  <!--        <source>1.8</source>-->
+  <!--        <target>1.8</target>-->
+  <!--        <configuration>-->
+  <!--          <instructions>-->
+  <!--            <_exportcontents>io.cdap.plugin.*;-->
+  <!--            </_exportcontents>-->
+  <!--            <Embed-Dependency>*;inline=false;scope=compile</Embed-Dependency>-->
+  <!--            <Embed-Transitive>true</Embed-Transitive>-->
+  <!--            <Embed-Directory>lib</Embed-Directory>-->
+  <!--          </instructions>-->
+  <!--        </configuration>-->
+  <!--        <executions>-->
+  <!--          <execution>-->
+  <!--            <phase>package</phase>-->
+  <!--            <goals>-->
+  <!--              <goal>bundle</goal>-->
+  <!--            </goals>-->
+  <!--          </execution>-->
+  <!--        </executions>-->
+  <!--      </plugin>-->
+  <!--      <plugin>-->
+  <!--        <groupId>io.cdap</groupId>-->
+  <!--        <artifactId>cdap-maven-plugin</artifactId>-->
+  <!--        <version>1.1.0</version>-->
+  <!--        <configuration>-->
+  <!--          <cdapArtifacts>-->
+  <!--            <parent>system:cdap-data-pipeline[6.1.0-SNAPSHOT,7.0.0-SNAPSHOT)</parent>-->
+  <!--            <parent>system:cdap-data-streams[6.1.0-SNAPSHOT,7.0.0-SNAPSHOT)</parent>-->
+  <!--          </cdapArtifacts>-->
+  <!--        </configuration>-->
+  <!--        <executions>-->
+  <!--          <execution>-->
+  <!--            <id>creclearate-artifact-config</id>-->
+  <!--            <phase>prepare-package</phase>-->
+  <!--            <goals>-->
+  <!--              <goal>create-plugin-json</goal>-->
+  <!--            </goals>-->
+  <!--          </execution>-->
+  <!--        </executions>-->
+  <!--      </plugin>-->
+  <!--    </plugins>-->
+  <!--  </build>-->
+
   <build>
     <plugins>
+      <!--      <plugin>-->
+      <!--        <groupId>org.apache.maven.plugins</groupId>-->
+      <!--        <artifactId>maven-checkstyle-plugin</artifactId>-->
+      <!--        <version>2.17</version>-->
+      <!--        <executions>-->
+      <!--          <execution>-->
+      <!--            <id>validate</id>-->
+      <!--            <phase>validate</phase>-->
+      <!--            <configuration>-->
+      <!--              <configLocation>checkstyle.xml</configLocation>-->
+      <!--              <suppressionsLocation>suppressions.xml</suppressionsLocation>-->
+      <!--              <encoding>UTF-8</encoding>-->
+      <!--              <consoleOutput>true</consoleOutput>-->
+      <!--              <failsOnError>true</failsOnError>-->
+      <!--              <includeTestSourceDirectory>true</includeTestSourceDirectory>-->
+      <!--            </configuration>-->
+      <!--            <goals>-->
+      <!--              <goal>check</goal>-->
+      <!--            </goals>-->
+      <!--          </execution>-->
+      <!--        </executions>-->
+      <!--        <dependencies>-->
+      <!--          <dependency>-->
+      <!--            <groupId>com.puppycrawl.tools</groupId>-->
+      <!--            <artifactId>checkstyle</artifactId>-->
+      <!--            <version>6.19</version>-->
+      <!--          </dependency>-->
+      <!--        </dependencies>-->
+      <!--      </plugin>-->
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.7.0</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.14.1</version>
+        <configuration>
+          <argLine>-Xmx2048m -Djava.awt.headless=true -XX:MaxPermSize=256m -XX:+UseConcMarkSweepGC
+            -XX:OnOutOfMemoryError="kill -9 %p" -XX:+HeapDumpOnOutOfMemoryError
+          </argLine>
+          <reuseForks>false</reuseForks>
+        </configuration>
+      </plugin>
+
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
         <version>3.3.0</version>
         <configuration>
           <instructions>
-            <_exportcontents>io.cdap.plugin.*;
+            <_exportcontents>io.cdap.plugin.*;org.apache.spark.streaming.kafka.*;
+              kafka.serializer.*;kafka.common;com.google.common.base.*;
             </_exportcontents>
             <Embed-Dependency>*;inline=false;scope=compile</Embed-Dependency>
             <Embed-Transitive>true</Embed-Transitive>
